# deep_vision

./: CMakeLists.txt  README.md  bin  package.xml
configs/: ball_1layer.json  ball_2layer.json  goal_1layer.json  goal_2layer.json  obstacle_1layer.json  obstacle_2layer.json
scripts/: add_noise.py  analyze_acceptance_score.r  big_mama.xml  cifaren.py  dewarp.py  dump_patches.py  get_data.py  get_data_rohow.py  get_from_json.py  get_n_random.py  mnist.py  prepare_data.sh  test_images.py  ycbcr2rbg.py
src/: CMakeLists.txt  analyze_acceptance_score.cpp  ball_slidingdetect.cpp  ball_test.cpp  ball_test_cifar.cpp  ball_test_exp.cpp  ball_train.cpp  ball_train_cifar.cpp  ball_train_exp.cpp  dnn_trainer.cpp  dump_detected.cpp  get_missclassifications.cpp  post_train_exp.cpp  predict.cpp  test_prediction.cpp
